# deepin-modelhub

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  deepin-modelhub.install  rules
include/: asrproxy.h  backendloader.h  backendmetaobject.h  configmanager.h  embeddingproxy.h  global_header.h  inferenceplugin.h  llmproxy.h  modelinfo.h  modelloader.h  modelproxy.h  modelrepo.h  runtimestate.h  util.h
src/: CMakeLists.txt
src/inference-backend/: CMakeLists.txt
src/inference-backend/llama.cpp/: CMakeLists.txt  libbackend-llamacpp.json  llamacppmodelconfig.cpp  llamacppmodelconfig.h  llamacppplugin.cpp  llamacppplugin.h  llamaembproxy.cpp  llamaembproxy.h  llamallmproxy.cpp  llamallmproxy.h  llamamodelwrapper.cpp  llamamodelwrapper.h  llamaserver.cpp  llamaserver.h
src/inference-backend/openvino/: CMakeLists.txt  libbackend-openvino.json  ovembproxy.cpp  ovembproxy.h  ovllmproxy.cpp  ovllmproxy.h  ovmodelconfig.cpp  ovmodelconfig.h  ovplugin.cpp  ovplugin.h
src/inference-backend/sensevoice.cpp/: CMakeLists.list  CMakeLists.txt  libbackend-sensevoicecpp.json  sensevoiceasrproxy.cpp  sensevoiceasrproxy.h  sensevoiceconfig.cpp  sensevoiceconfig.h  sensevoicemodelwrapper.cpp  sensevoicemodelwrapper.h  sensevoiceplugin.cpp  sensevoiceplugin.h
src/libmodelhub/: CMakeLists.txt  backendloader.cpp  backendloader_p.h  backendmetaobject.cpp  configmanager.cpp  embeddingproxy.cpp  inferenceplugin.cpp  llmproxy.cpp  modelinfo.cpp  modelloader.cpp  modelproxy.cpp  modelrepo.cpp  modelrepo_p.h  modelrunner.cpp  modelrunner.h  runtimestate.cpp  systemenv.cpp  systemenv.h  util.cpp
src/modelhub/: CMakeLists.txt  command.cpp  command.h  httpserver.cpp  httpserver.h  httpserver_p.h  main.cpp  modelserver.cpp  modelserver.h  modeltasks.cpp  modeltasks.h
